testando imagens dentro do diretorio assets

--- a/Aula_1.ipynb
+++ b/Aula_1.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Introdução da introdução: \n",
     "\n",
-    "A primeira coisa que temos que entender são as variáveis. Variáveis são entidades que o computador usa para armazenar informação. Elas tem três atributos principais: Um nome, um tipo e um valor. Por exemplo:\n",
+    "A primeira coisa que temos que entender são as variáveis. Variáveis são entidades que o computador usa para armazenar informação. Elas tem três atributos principais: Um nome, um tipo e um valor. Veja: \n",
     "\n"
    ]
   },
@@ -24,14 +24,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "from IPython.display import Image\n",
-    "from IPython.core.display import HTML \n",
-    "Image(url= \"http://my_site.com/my_picture.jpg\")"
+    "\n",
+    "![teste](https://jp-guimaraes.github.io/assets/var.png)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Por exemplo, podemos fazer:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -49,12 +56,12 @@
     "id": "S2oEpGQZ4Az2"
    },
    "source": [
-    "Quando damos essa instrução ao computador estamos indiretamente dizendo: \"Computador, reserve um espaço na memória que eu quero chamar de 'x'. Vou usar ele para guardar valores numéricos. A princípio ele vai guardar o número 47.\""
+    "Quando damos essa instrução ao computador estamos indiretamente dizendo: \"Computador, reserve um espaço na memória que eu quero chamar de 'x'. Vou usar ele para guardar valores numéricos. A princípio ele vai guardar o número 47.\" ![teste](https://jp-guimaraes.github.io/assets/var.png)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -71,7 +78,7 @@
        "47"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
