--- a/Aula_1.ipynb
+++ b/Aula_1.ipynb
@@ -25,7 +25,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "![teste](https://jp-guimaraes.github.io/assets/var.png)\n",
+    "![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/var.png)\n",
     "\n"
    ]
   },
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -56,12 +56,15 @@
     "id": "S2oEpGQZ4Az2"
    },
    "source": [
-    "Quando damos essa instrução ao computador estamos indiretamente dizendo: \"Computador, reserve um espaço na memória que eu quero chamar de 'x'. Vou usar ele para guardar valores numéricos. A princípio ele vai guardar o número 47.\" ![teste](https://jp-guimaraes.github.io/assets/var.png)\n"
+    "Quando damos essa instrução ao computador estamos indiretamente dizendo: \"Computador, reserve um espaço na memória que eu quero chamar de 'x'. Vou usar ele para guardar valores numéricos. A princípio ele vai guardar o número 47.\" ![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/var_x.png)\n",
+    "\n",
+    "\n",
+    "Para imprimir na tela basta escrever x numa célula e executá-la. O atalho de teclado é shift + enter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -78,7 +81,7 @@
        "47"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -108,7 +111,7 @@
    },
    "outputs": [],
    "source": [
-    "x = 47\n"
+    "x = 2\n"
    ]
   },
   {
@@ -119,7 +122,7 @@
     "id": "fbSdVgvU5xaS"
    },
    "source": [
-    "Agora a posição de memória referenciada pelo nome 'x' guarda o número 47. "
+    "Agora a posição de memória referenciada pelo nome 'x' guarda o número 2. "
    ]
   },
   {
@@ -134,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 5,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -147,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -164,10 +167,8 @@
        "11.2"
       ]
      },
-     "execution_count": 4,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 6,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -201,13 +202,11 @@
     {
      "data": {
       "text/plain": [
-       "48"
+       "12.2"
       ]
      },
-     "execution_count": 16,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 7,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -231,13 +230,11 @@
     {
      "data": {
       "text/plain": [
-       "33.6"
+       "-2.200000000000001"
       ]
      },
-     "execution_count": 17,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 8,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -247,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -261,13 +258,11 @@
     {
      "data": {
       "text/plain": [
-       "147.58"
+       "35.168"
       ]
      },
-     "execution_count": 18,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 9,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -277,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -291,13 +286,11 @@
     {
      "data": {
       "text/plain": [
-       "5.875"
+       "1.4"
       ]
      },
-     "execution_count": 19,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 10,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -317,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -329,21 +322,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "IUAu11INGE3v"
    },
-   "outputs": [],
    "source": [
     "Como pode-se notar, não há nenhuma diferenciação da atribuição numérica a strings em python. 'x' agora é a string 'bola'! "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -360,10 +351,8 @@
        "'bola'"
       ]
      },
-     "execution_count": 7,
-     "metadata": {
-      "tags": []
-     },
+     "execution_count": 13,
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
@@ -372,14 +361,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "9_stDScCGMAg"
    },
-   "outputs": [],
    "source": [
     "A forma de leitura é a mesma: \"Computador, reserve um espaço de memória que eu quero chamar de 'x' e guarde lá dentro a palavra 'bola' \". A informação anterior guardada na memória, no caso o valor 11.2 é descartada."
    ]
@@ -396,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 19,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -408,21 +395,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 0,
+   "cell_type": "markdown",
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "eHzqVg68H6nX"
    },
-   "outputs": [],
    "source": [
     "ou então\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 20,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -440,17 +425,77 @@
     "id": "a13qWw_1IK5A"
    },
    "source": [
-    "Operações lógicas podem ser feitas normalmente sob as variávéis booleanas:"
+    "As variáveis booleanas podem ser submetidas a operadores lógicos. Veja:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 21,
    "metadata": {
     "colab": {},
     "colab_type": "code",
     "id": "l-CbvBTrIQGC"
    },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x and y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "x or y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "not x"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
