--- a/Aula-01.ipynb
+++ b/Aula-01.ipynb
@@ -14,7 +14,7 @@
     "id": "6Tfl-pei4DKg"
    },
    "source": [
-    "## Introdução da introdução: \n",
+    "## As variáveis\n",
     "\n",
     "A primeira coisa que temos que entender são as variáveis. Variáveis são entidades que o computador usa para armazenar informação. Elas tem três atributos principais: Um nome, um tipo e um valor. Veja: \n",
     "\n"
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -58,13 +58,13 @@
    "source": [
     "Quando damos essa instrução ao computador estamos indiretamente dizendo: \"Computador, reserve um espaço na memória que eu quero chamar de 'x'. Vou usar ele para guardar valores numéricos. A princípio ele vai guardar o número 47.\" ![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/var_x.png)\n",
     "\n",
-    "\n",
-    "Para imprimir na tela basta escrever x numa célula e executá-la. O atalho de teclado é shift + enter"
+    "### Exibindo o conteúdo de uma variável armazenada na memória\n",
+    "Para exibir o conteúdo da variável 'x' na tela basta escrever x numa célula e executá-la. O atalho de teclado é shift + enter"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -81,7 +81,7 @@
        "47"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -97,13 +97,13 @@
     "id": "nO9T8scn5teZ"
    },
    "source": [
-    "Sempre que eu me referir a x, o computador vai na sua memória, no endereço que separou para o x, e lê esse resultado.\n",
+    "Sempre que eu me referir a 'x', o computador vai na sua memória, no endereço que separou para o 'x', e lê esse resultado.\n",
     "Mas, como o próprio nome diz, trata-se de um valor variável. Para mudar o valor que está armazenado nessa memória basta fazer uma nova operação de atribuição. Veja:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -149,8 +149,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Imprimindo o conteúdo da variável x, obtemos:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -167,7 +174,7 @@
        "11.2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -183,12 +190,14 @@
     "id": "-oGYSaIQQ0G6"
    },
    "source": [
-    "Você pode notar que para inicializar ou atribuir valores a uma variável numérica, o símbolo '=' foi utilizado. Ele é chamado de operador de atribuição. Existem outros tipos de operadores. Para variáveis numéricas destacam-se os operadores aritméticos. Veja alguns exemplos com os operadores soma (+), subtração(-), multiplicação (*) e divisão (/):\n"
+    "## Operando variáveis \n",
+    "\n",
+    "Você pode notar que para inicializar ou valores a uma variável numérica, o símbolo '=' foi utilizado. Ele é chamado de operador de atribuição. Existem outros tipos de operadores. Para variáveis numéricas destacam-se os operadores aritméticos. Veja alguns exemplos com os operadores soma (+), subtração(-), multiplicação (*) e divisão (/):\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -205,7 +214,7 @@
        "12.2"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -233,7 +242,7 @@
        "-2.200000000000001"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -261,7 +270,7 @@
        "35.168"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -272,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -289,7 +298,7 @@
        "1.4"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,12 +314,13 @@
     "id": "hsiEeLxCFTIE"
    },
    "source": [
+    "## Outro tipo de variável: As strings\n",
     "Outro tipo de variável muito comum são as strings. Stings são cadeias de caracteres utilizadas para armazenar palavras. Em Python, para atribuir uma string a uma variável basta usar as áspas. Exemplo:\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -334,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -351,7 +361,7 @@
        "'bola'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,12 +388,13 @@
     "id": "cIJO8oijHATv"
    },
    "source": [
+    "## Variáveis Booleanas\n",
     "As variáveis booleanas também estão presentes em Python. Em geral, modela-se informações do mundo real que expressam antagonismo por uma variável binária no computador, por exemplo: cheio e vazio, verdadeiro e falso, 5V e 0V, pertence ou não pertence, contém e não contém, etc. Em python usa-se o clássico \"Verdadeiro e Falso\" mas em inglês, ou seja, True e False. Assim, é possível fazer as seguintes atribuições: "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -407,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -425,12 +436,14 @@
     "id": "a13qWw_1IK5A"
    },
    "source": [
+    "### Operando variáveis booleanas\n",
+    "\n",
     "As variáveis booleanas podem ser submetidas a operadores lógicos. Veja:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -443,7 +456,7 @@
        "False"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -454,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +476,7 @@
        "True"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -474,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -483,7 +496,7 @@
        "False"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -491,6 +504,13 @@
    "source": [
     "not x"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
