--- a/Aula-02.ipynb
+++ b/Aula-02.ipynb
@@ -20,39 +20,39 @@
     "Num algoritmos, as instruções são executadas de cima para baixo, em ordem:\n",
     "![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/algo.png)\n",
     "\n",
-    "Dessa forma, **normalmente**, uma instrução é executada após a outra, de cima para baixo. Para calcular a média entre dois números, por exemplo, fazemos:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n1 = 10"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "n2 = 20"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "soma = n1 + n2"
+    "Dessa forma, **normalmente**, uma instrução é executada após a outra, de cima para baixo. Para calcular a média entre duas notas, por exemplo, fazemos:\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nota1 = 6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nota2 = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "soma = nota1 + nota2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,25 +78,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
-    "media = (n1+n2)/2"
+    "media = (nota1 + nota2)/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "15.0"
+       "5.0"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,25 +114,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "media_errada = n1+n2/2"
+    "media_errada = nota1 + nota2/2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "20.0"
+       "8.0"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,14 +145,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando fazemos n1+n2/2 e a divisão é prioritária sobre a adição, n2 é dividido por 2 e depois somado a n1. "
+    "Quando fazemos nota1+nota2/2 e a divisão é prioritária sobre a adição, nota2 é dividido por 2 e depois somado a nota1. "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Entendeu o tal fluxo? Agora vamos aprender a controlá-lo. A primeira ferramenta para isso são as estruturas de decisão."
+    "Entendeu o tal fluxo? Agora vamos aprender a controlá-lo. A primeira ferramenta para isso são as estruturas de decisão. "
    ]
   },
   {
@@ -160,6 +160,58 @@
    "metadata": {},
    "source": [
     "## Estruturas de decisão"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Introdução\n",
+    "\n",
+    "As estruturas de decisão servem para criar ramificações no fluxo original de dados. Por exemplo, **após** calcular a média baseado nas duas notas dadas, devemos imprimir \"Aprovado\" ou \"Reprovado\" dependendo da média adquirida. **Se** a média for *maior* do que 6, vamos imprimir \"Aprovado!\". **Senão**, vamos imprimir \"Reprovado\"."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Comandos importantes\n",
+    "Para poder implementar problemas como o descrito acima, tempos que introduzir alguns comandos em Python. O primeiro deles é para imprimir na tela. Para ver o valor armazenado por uma variável, basta escrever o nome dela e executar a célula. Entretando, algumas vezes é mais conveniente usar a função **print**. O uso é o seguinte: print(NOME_DA_VARIÁVEL). Exemplo:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nota1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Para fazer o tal desvio no fluxo, vamos usar o comando **if** que é justamente a palavra em inglês para dizer *se*. O uso é o seguinte:\n",
+    "\n",
+    "if(VARIAVEL_BOOLEANA)\n",
+    "\n",
+    "    TRECHO DE CÓDIGO 1\n",
+    "    \n",
+    "else\n",
+    "\n",
+    "    TRECHO DE CÓDIGO 2\n",
+    "    \n",
+    "Dessa forma, se a variável booleana for verdadeira, ou seja *true*, o trecho de código 1 é executado. Caso cotrário, ou seja, se a variável booleana que está sendo testada for falsa, *false*, o trecho de código 2 é que é executado.\n",
+    "\n"
    ]
   },
   {
