--- a/Aula-02.ipynb
+++ b/Aula-02.ipynb
@@ -145,7 +145,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Quando fazemos nota1+nota2/2 e a divisão é prioritária sobre a adição, nota2 é dividido por 2 e depois somado a nota1. "
+    "Quando fazemos:\n",
+    "```python\n",
+    "nota1+nota2/2\n",
+    "```\n",
+    " e a divisão é prioritária sobre a adição. A variável nota2 é dividido por 2 e depois somado ao valor armazenado na variável nota1. "
    ]
   },
   {
@@ -176,12 +180,18 @@
    "metadata": {},
    "source": [
     "### Comandos importantes\n",
-    "Para poder implementar problemas como o descrito acima, tempos que introduzir alguns comandos em Python. O primeiro deles é para imprimir na tela. Para ver o valor armazenado por uma variável, basta escrever o nome dela e executar a célula. Entretando, algumas vezes é mais conveniente usar a função **print**. O uso é o seguinte: print(NOME_DA_VARIÁVEL). Exemplo:"
+    "Para poder implementar problemas como o descrito acima, tempos que introduzir alguns comandos em Python. O primeiro deles é para imprimir na tela. Para ver o valor armazenado por uma variável, basta escrever o nome dela e executar a célula. Entretando, algumas vezes é mais conveniente usar a função **print**. O uso é o seguinte: \n",
+    "\n",
+    "```python\n",
+    "print(NOME_DA_VARIAVEL)\n",
+    "```\n",
+    "\n",
+    "Exemplo:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -202,24 +212,45 @@
    "source": [
     "Para fazer o tal desvio no fluxo, vamos usar o comando **if** que é justamente a palavra em inglês para dizer *se*. O uso é o seguinte:\n",
     "\n",
-    "if(VARIAVEL_BOOLEANA)\n",
-    "\n",
+    "```python\n",
+    "if(VARIAVEL_BOOLEANA):\n",
     "    TRECHO DE CÓDIGO 1\n",
-    "    \n",
-    "else\n",
-    "\n",
+    "else:\n",
     "    TRECHO DE CÓDIGO 2\n",
-    "    \n",
-    "Dessa forma, se a variável booleana for verdadeira, ou seja *true*, o trecho de código 1 é executado. Caso cotrário, ou seja, se a variável booleana que está sendo testada for falsa, *false*, o trecho de código 2 é que é executado.\n",
+    "```\n",
+    "\n",
+    "Dessa forma, se a variável booleana for verdadeira, ou seja <span style=\"color:green\">**True**</span>, o trecho de código 1 é executado. Caso cotrário, ou seja, se a variável booleana que está sendo testada for falsa, <span style=\"color:green\">**False**</span>, o trecho de código 2 é que é executado. Exemplo:\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "eita!\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = True\n",
+    "if(a):\n",
+    "    print(\"eita!\")\n",
+    "else:\n",
+    "    print(\"bingo!\")\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula. Repare que "
+   ]
   }
  ],
  "metadata": {
