incluindo figura if

--- a/Aula-02.ipynb
+++ b/Aula-02.ipynb
@@ -249,8 +249,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula. Repare que "
+    "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula e observe qual trecho de código é executado."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
