--- a/Aula-02.ipynb
+++ b/Aula-02.ipynb
@@ -210,6 +210,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Desvio no fluxo\n",
+    "\n",
+    "\n",
+    "![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/if.png)\n",
+    "Observe a figura acima. A ordem de execução das instruções é a seguinte: A instrução 1 é executada, seguida pela instrução 2. Após isso, ou a instrução A é executada ou a instrução B é executada, dependendo da condição encontrada. Por exemplo, se for verdadeiro, a instrução A é executada, caso seja falso, a instrução B é executada. Após o desvio no fluxo, as instruções posteriores como a instrução 3 são executadas normalmente, seguindo o fluxo normal do algoritmo. Vamos ver um exemplo prático com Python: \n",
+    "\n",
+    "\n",
+    "\n",
     "Para fazer o tal desvio no fluxo, vamos usar o comando **if** que é justamente a palavra em inglês para dizer *se*. O uso é o seguinte:\n",
     "\n",
     "```python\n",
@@ -219,13 +227,13 @@
     "    TRECHO DE CÓDIGO 2\n",
     "```\n",
     "\n",
-    "Dessa forma, se a variável booleana for verdadeira, ou seja <span style=\"color:green\">**True**</span>, o trecho de código 1 é executado. Caso cotrário, ou seja, se a variável booleana que está sendo testada for falsa, <span style=\"color:green\">**False**</span>, o trecho de código 2 é que é executado. Exemplo:\n",
+    "Dessa forma, se a variável booleana for verdadeira, ou seja <span style=\"color:green\">**True**</span>, o trecho de código 1 é executado. Caso contrário, ou seja, se a variável booleana que está sendo testada for falsa, <span style=\"color:green\">**False**</span>, o trecho de código 2 é que é executado. \n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -249,8 +257,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula e observe qual trecho de código é executado."
+    "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula e observe qual trecho de código é executado.\n",
+    "\n",
+    "\n",
+    "Ou seja, dependendo do valor da variável `a` ou \"eita!\" ou \"bingo!\" é impresso. É importante notar que, da forma como foi escrito o código acima, nunca os dois trechos de código serão executados ao mesmo tempo. "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
