--- a/Aula-02.ipynb
+++ b/Aula-02.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
        "5.0"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "8.0"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -214,11 +214,10 @@
     "\n",
     "\n",
     "![teste](https://raw.githubusercontent.com/jp-guimaraes/intro_python/master/assets/if.png)\n",
-    "Observe a figura acima. A ordem de execução das instruções é a seguinte: A instrução 1 é executada, seguida pela instrução 2. Após isso, ou a instrução A é executada ou a instrução B é executada, dependendo da condição encontrada. Por exemplo, se for verdadeiro, a instrução A é executada, caso seja falso, a instrução B é executada. Após o desvio no fluxo, as instruções posteriores como a instrução 3 são executadas normalmente, seguindo o fluxo normal do algoritmo. Vamos ver um exemplo prático com Python: \n",
+    "Observe a figura acima. A ordem de execução das instruções é a seguinte: A instrução 1 é executada, seguida pela instrução 2. Após isso, ou a instrução A é executada ou a instrução B é executada, dependendo da condição encontrada. Por exemplo, se for verdadeiro, a instrução A é executada, caso seja falso, a instrução B é executada. Após o desvio no fluxo, as instruções posteriores como a instrução 3 são executadas normalmente, seguindo o fluxo normal do algoritmo. \n",
     "\n",
     "\n",
-    "\n",
-    "Para fazer o tal desvio no fluxo, vamos usar o comando **if** que é justamente a palavra em inglês para dizer *se*. O uso é o seguinte:\n",
+    "Para fazer o tal desvio no fluxo em Python, vamos usar o comando **if** que é justamente a palavra em inglês para dizer *se*. O uso é o seguinte:\n",
     "\n",
     "```python\n",
     "if(VARIAVEL_BOOLEANA):\n",
@@ -233,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +259,114 @@
     "Experimente agora mudar o valor da variável da célula acima de <span style=\"color:green\">**True**</span> para <span style=\"color:green\">**False**</span> e vice-versa. Depois execute a célula e observe qual trecho de código é executado.\n",
     "\n",
     "\n",
-    "Ou seja, dependendo do valor da variável `a` ou \"eita!\" ou \"bingo!\" é impresso. É importante notar que, da forma como foi escrito o código acima, nunca os dois trechos de código serão executados ao mesmo tempo. "
+    "Ou seja, dependendo do valor da variável `a` ou \"eita!\" ou \"bingo!\" é impresso. É importante notar que, da forma como foi escrito o código acima, nunca os dois trechos de código serão executados ao mesmo tempo. \n",
+    "\n",
+    "Voltando ao problema inicial, queremos imprimir \"Aprovado\" ou \"Reprovado\" dependendo da média obtida. Veja:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nota1 = 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nota2 = 4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "media = (nota1 + nota2)/2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Aqui, fazemos a pergunta: Média é maior ou igual do que 6? Se você não lembra como fazer isso, volte ao fim da aula passada para conferir o procedimento."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "teste = (media >= 6 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O aluno está \n",
+      "aprovado\n",
+      "!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"O aluno está \")\n",
+    "if(teste):\n",
+    "    print(\"aprovado\")\n",
+    "else:\n",
+    "    print(\"reprovado\")\n",
+    "print(\"!!!\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Em geral, não se usa a variável teste para armazenar a pergunta. Ela é introduzida de forma direta dentro do <span style=\"color:green\">**if**</span>, veja:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "O aluno está \n",
+      "aprovado\n",
+      "!!!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"O aluno está \")\n",
+    "if(media>=6):\n",
+    "    print(\"aprovado\")\n",
+    "else:\n",
+    "    print(\"reprovado\")\n",
+    "print(\"!!!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Repare que tanto a instrução antes do if 'print(\"o aluno está: \")', como a instrução 'print(\"!!!\")' que está depois do <span style=\"color:green\">**if**</span>/<span style=\"color:green\">**else**</span> são executadas de forma independentes."
    ]
   },
   {
